src/objects/Sandbox__c.object
<CustomObject>
    <fields>
        <fullName>Being_used_for__c</fullName>
        <label>Being used for</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Created_date__c</fullName>
        <label>Created date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_last_refreshed__c</fullName>
        <label>Date last refreshed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                </value>
                <value>
                    <fullName>Refreshed</fullName>
                </value>
                <value>
                    <fullName>Deleted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Developer</fullName>
                </value>
                <value>
                    <fullName>Developer Pro</fullName>
                </value>
                <value>
                    <fullName>Full</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Sandbox</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Created_date__c</columns>
        <columns>Date_last_refreshed__c</columns>
        <columns>Type__c</columns>
        <columns>Being_used_for__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Deleted</value>
        </filters>
        <label>In use</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sandboxes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>